--- a/.sencha/package/sencha.cfg
+++ b/.sencha/package/sencha.cfg
@@ -11,7 +11,7 @@ package.name=sencha-ext
 # then to style "Ext.panel.Panel" you would put SASS in
 # ./sass/src/Ext/panel/Panel.scss.
 #
-package.sass.namespace=Cntysoft.SenchaExt
+package.sass.namespace=SenchaExt
 
 # This is the comma-separated list of folders where classes reside. These
 # classes must be explicitly required to be included in the build.
